/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 *  Copyright (c) 2018, https://github.com/nebulaim
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mtproto;

option java_package = "com.nebulaim.engine.mtproto";
option java_outer_classname = "MTProto";
option optimize_for = CODE_SIZE;

import "schema.tl.crc32.proto";
import "schema.tl.core_types.proto";
import "schema.tl.sync.proto";


///////////////////////////////////////////////////////////////////////////////
// ConnectToServer <--
//  + TL_sync_connectToSessionServer
//
message ConnectToServer_Data {
    int32 sync_server_id = 1;
}

message ConnectToServer {
    TLConstructor constructor = 1;
    ConnectToServer_Data data2 = 2;
}

// sync.connectToSessionServer sync_server_id:int = ConnectToServer;
message TL_sync_connectToSessionServer {
    ConnectToServer_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// ServerConnected <--
//  + TL_sync_sessionServerConnected
//
message ServerConnected_Data {
    int32 session_server_id = 1;
    string server_name = 2;
}

message ServerConnected {
    TLConstructor constructor = 1;
    ServerConnected_Data data2 = 2;
}

// sync.sessionServerConnected session_server_id:int server_name:string = ServerConnected;
message TL_sync_sessionServerConnected {
    ServerConnected_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// PushData <--
//  + TL_sync_pushUpdatesData
//  + TL_sync_pushRpcResultData
//
message PushData_Data {
    int64 auth_key_id = 1;
    Updates updates = 2;
    int64 client_req_msg_id = 3;
    bytes result = 4;
}

message PushData {
    TLConstructor constructor = 1;
    PushData_Data data2 = 2;
}

// sync.pushUpdatesData auth_key_id:long updates:Updates = PushData;
message TL_sync_pushUpdatesData {
    PushData_Data data2 = 2;
}

// sync.pushRpcResultData auth_key_id:long client_req_msg_id:long result:bytes = PushData;
message TL_sync_pushRpcResultData {
    PushData_Data data2 = 2;
}




///////////////////////////////////////////////////////////////////////////////
// sync.syncUpdates flags:# user_id:int auth_key_id:long server_id:flags.0?int not_me:flags.1?true updates:Updates = Bool;
message TL_sync_syncUpdates {
    int32 user_id = 2;
    int64 auth_key_id = 3;
    int32 server_id = 4;
    bool not_me = 5;
    Updates updates = 6;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushUpdates user_id:int updates:Updates = Bool;
message TL_sync_pushUpdates {
    int32 user_id = 1;
    Updates updates = 2;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushChannelUpdates channel_id:int exclude_user_id:int updates:Updates = Bool;
message TL_sync_pushChannelUpdates {
    int32 channel_id = 1;
    int32 exclude_user_id = 2;
    Updates updates = 3;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushRpcResult server_id:int auth_key_id:long req_msg_id:long result:bytes = Bool;
message TL_sync_pushRpcResult {
    int32 server_id = 1;
    int64 auth_key_id = 2;
    int64 req_msg_id = 3;
    bytes result = 4;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getState auth_key_id:long user_id:int = updates.State;
message TL_sync_getState {
    int64 auth_key_id = 1;
    int32 user_id = 2;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getDifference flags:# auth_key_id:long user_id:int pts:int pts_total_limit:flags.0?int date:int qts:int = updates.Difference;
message TL_sync_getDifference {
    int64 auth_key_id = 2;
    int32 user_id = 3;
    int32 pts = 4;
    int32 pts_total_limit = 5;
    int32 date = 6;
    int32 qts = 7;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getChannelDifference flags:# auth_key_id:long user_id:int force:flags.0?true channel:InputChannel filter:ChannelMessagesFilter pts:int limit:int = updates.ChannelDifference;
message TL_sync_getChannelDifference {
    int64 auth_key_id = 2;
    int32 user_id = 3;
    bool force = 4;
    InputChannel channel = 5;
    ChannelMessagesFilter filter = 6;
    int32 pts = 7;
    int32 limit = 8;
}


///////////////////////////////////////////////////////////////////////////////
// Vector api result type


///////////////////////////////////////////////////////////////////////////////
// rpc

service RPCSync {
    // sync.syncUpdates flags:# user_id:int auth_key_id:long server_id:flags.0?int not_me:flags.1?true updates:Updates = Bool;
    rpc sync_syncUpdates(TL_sync_syncUpdates) returns (Bool) {}
    // sync.pushUpdates user_id:int updates:Updates = Bool;
    rpc sync_pushUpdates(TL_sync_pushUpdates) returns (Bool) {}
    // sync.pushChannelUpdates channel_id:int exclude_user_id:int updates:Updates = Bool;
    rpc sync_pushChannelUpdates(TL_sync_pushChannelUpdates) returns (Bool) {}
    // sync.pushRpcResult server_id:int auth_key_id:long req_msg_id:long result:bytes = Bool;
    rpc sync_pushRpcResult(TL_sync_pushRpcResult) returns (Bool) {}
    // sync.getState auth_key_id:long user_id:int = updates.State;
    rpc sync_getState(TL_sync_getState) returns (updates_State) {}
    // sync.getDifference flags:# auth_key_id:long user_id:int pts:int pts_total_limit:flags.0?int date:int qts:int = updates.Difference;
    rpc sync_getDifference(TL_sync_getDifference) returns (updates_Difference) {}
    // sync.getChannelDifference flags:# auth_key_id:long user_id:int force:flags.0?true channel:InputChannel filter:ChannelMessagesFilter pts:int limit:int = updates.ChannelDifference;
    rpc sync_getChannelDifference(TL_sync_getChannelDifference) returns (updates_ChannelDifference) {}
}

